Convert Person to Kotlin (#289)
Also replace BirthDate by Foedselsdato2